feat: prisma schema

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,5 +10,5 @@ services:
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: pass123
       POSTGRES_DB: 3agr2
-    volumes:
-      - ./volumes/postgres:/var/lib/postgresql/data
+    # volumes:
+    #   - ./volumes/postgres:/var/lib/postgresql/data
