--- a/package.json
+++ b/package.json
@@ -22,13 +22,18 @@
     "zod": "^4.1.11"
   },
   "devDependencies": {
+    "@commitlint/cli": "^20.1.0",
+    "@commitlint/config-conventional": "^20.0.0",
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "commitlint": "^20.1.0",
     "eslint": "^9",
     "eslint-config-next": "15.5.3",
+    "lint-staged": "^16.2.6",
+    "prettier": "^3.6.2",
     "prisma": "^6.16.3",
     "tailwindcss": "^4",
     "typescript": "^5"
