--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-dom": "19.1.0",
     "react-hook-form": "^7.63.0",
     "react-toastify": "^11.0.5",
+    "resend": "^6.4.2",
     "zod": "^4.1.11"
   },
   "devDependencies": {
